--- a/template/admin.html
+++ b/template/admin.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>¡Bienvenido a SignSense!</title>
 </head>
-<style>
-
-</style>
 <body>
-    <h1>BIENVENIDO</h1>
+    <h1 align="center">¡Bienvenido a SignSense!</h1>
+    <p align="center">
+        <img align="center" src="sortdo.png" alt="midudev" height="180px" width="190px" />
+    </p>
+    <p align="center">¡Hola, soy Santiago Arango Villa!</p>
+    <p align="center">
+        En este proyecto, te presento SignSense, una aplicación innovadora que convierte señales y sonidos del entorno en representaciones visuales y táctiles, brindando una experiencia alternativa del mundo auditivo para personas sordas.
+    </p>
+    <h2 align="center">¿Por qué SignSense?</h2>
+    <p align="center">
+        <strong>¡Porque la inclusión es fundamental en la tecnología!</strong> 💻<br>
+        SignSense nace de la necesidad de proporcionar soluciones inclusivas y accesibles para personas sordas, permitiéndoles experimentar el mundo auditivo de manera única, y creyendo en sistemas adaptables a entornos sin soporte retroactivo.
+    </p>
+    <h2 align="center"> ¿Qué ofrece SignSense? </h2>
+    <p align="center">
+        Desde <strong>la conversión de señales</strong> hasta <strong>representaciones visuales y táctiles</strong>, SignSense ofrece una experiencia completa y adaptativa. Algunos aspectos destacados incluyen:
+    </p>
+    <ul align="center" style="list-style-type:none;">
+        <li>Conversión de señales y sonidos del entorno.</li>
+        <li>Representaciones visuales y táctiles para una experiencia alternativa.</li>
+        <li>Personalización basada en preferencias y ubicación del usuario.</li>
+        <li>Integración a sistemas que nunca plantearon una integración</li>
+    </ul>
+    <h2 align="center">Uso de las librerías:</h2>
+    <ul align="center" style="list-style-type:none;">
+        <li><strong>NumPy:</strong> Para el procesamiento eficiente de datos relacionados con las señales y sonidos.</li>
+        <li><strong>Pandas:</strong> Para organizar y gestionar bases de datos de usuarios, preferencias y patrones de uso.</li>
+        <li><strong>Matplotlib:</strong> Para la creación de visualizaciones interactivas que representen de manera efectiva las señales convertidas.</li>
+        <li><strong>Scipy:</strong> Utilizado para implementar algoritmos avanzados de procesamiento de señales.</li>
+        <li><strong>Geopandas:</strong> Integración de datos geoespaciales para adaptar la experiencia según la ubicación del usuario.</li>
+    </ul>
+
+    <h2 align="center"> ¡Únete a SignSense! </h2>
+    <p align="center">
+        Si estás listo para ser parte de este proyecto que transforma la tecnología en inclusión,
+        ¡únete y colabora por un futuro más unido!
+    </p>
+    <p align="center">
+        ¡Gracias por contribuir a la creación de un mundo más inclusivo y por permitirnos ser tu guía en esta aventura!
+    </p>
+    <p align="center">
+        ¡Nos vemos en nuestro próximo hito!
+    </p>
+    <p align="center" width="300">
+        <img align="center" width="500" src="2560px-Patreon_logo_with_wordmark.svg.png" />
+        <h3 align="center">¡Hola, me llamo Santiago Arango Villa! 🐈‍👨🏻‍💻</h3>
+    </p>
+    <p align="center">Soy <strong>Estudiante de la Universidad Nacional de Colombia</strong> y programador entusiasta 🐈‍⬛.<br />¡Puedes encontrarme aquí! 👇</p>
+    <p align="center">
+        <a href="https://www.linkedin.com/in/santiago-arango-villa-a9297a227/" target="blank" style="margin-right:4px">
+            <img align="center" src="https://user-images.githubusercontent.com/49077085/188248117-f2bdf648-a274-4eff-babb-967f3576d6f8.svg" alt="midudev" height="28px" width="28px" />
+        </a>
+        <a href="https://www.youtube.com/channel/UCouJY6fX7ShdDONeN3thUUA" target="blank" style="margin-right:4px">
+            <img align="center" src="https://user-images.githubusercontent.com/49077085/188248348-624b06d3-d787-4223-8ca1-85edffe4bf04.svg" alt="midudev" height="38px" width="38px" />
+        </a>
+        <a href="https://www.instagram.com/streaker_a/" target="blank">
+            <img align="center" src="https://user-images.githubusercontent.com/49077085/188248313-c2090cae-c409-43ce-8356-5d1f0f13fa53.svg" alt="midu.dev" height="38px" width="38px" />
+        </a>
+        <a href="https://twitter.com/santiag52487362" target="blank">
+            <img align="center" src="https://user-images.githubusercontent.com/49077085/188248390-3181255d-d4fc-4a3a-b1a1-e26a2218333f.svg" alt="midudev" height="28px" width="28px" />
+        </a>
+    </p>
 </body>
 </html>
