--- a/template/admin.html
+++ b/template/admin.html
@@ -8,7 +8,7 @@
 <body>
     <h1 align="center">¡Bienvenido a SignSense!</h1>
     <p align="center">
-        <img align="center" src="sortdo.png" alt="midudev" height="180px" width="190px" />
+        <img align="center" src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/a95ae2e8a0f257a966ad03198b0cee0b927f6ecf/sortdo.png" alt="midudev" height="360px" width="380px" />
     </p>
     <p align="center">¡Hola, soy Santiago Arango Villa!</p>
     <p align="center">
@@ -50,7 +50,7 @@
         ¡Nos vemos en nuestro próximo hito!
     </p>
     <p align="center" width="300">
-        <img align="center" width="500" src="2560px-Patreon_logo_with_wordmark.svg.png" />
+        <img align="center" width="500" src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/a95ae2e8a0f257a966ad03198b0cee0b927f6ecf/2560px-Patreon_logo_with_wordmark.svg.png" />
         <h3 align="center">¡Hola, me llamo Santiago Arango Villa! 🐈‍👨🏻‍💻</h3>
     </p>
     <p align="center">Soy <strong>Estudiante de la Universidad Nacional de Colombia</strong> y programador entusiasta 🐈‍⬛.<br />¡Puedes encontrarme aquí! 👇</p>
