--- a/template/inicio.html
+++ b/template/inicio.html
@@ -222,7 +222,7 @@
         <div class="carousel">
             <!-- Contenido del carrusel -->
             <div class="carousel-item">
-                <img src="static/sordo mudo 1.jfif" alt="App 1">
+                <img src="https://raw.githubusercontent.com/straeker18/ppi_dai_ARANGOs/main/static/sordo%20mudo%201.jfif" alt="App 1">
                 <h3>Descubre el Mundo de la Comunicación No Verba</h3>
                 <p>Aprende el lenguaje de señas para conectar con la comunidad sorda y mejorar tu comunicación diaria.</p>
             </div>
