--- a/template/inicio.html
+++ b/template/inicio.html
@@ -227,57 +227,57 @@
                 <p>Aprende el lenguaje de señas para conectar con la comunidad sorda y mejorar tu comunicación diaria.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/sordo mudo .jfif" alt="App 2">
+                <img src="static/sordo_mudo_.jfif" alt="App 2">
                 <h3>Conéctate con Más Personas</h3>
                 <p>Interactúa con un grupo más amplio y enriquece tus relaciones personales y profesionales.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 3 inicio.jpg" alt="App 3">
+                <img src="static/imagen_3_inicio.jpg" alt="App 3">
                 <h3>Transforma tu Empatía en Acción</h3>
                 <p>Apoya y comprende mejor a la comunidad sorda, marcando una diferencia significativa.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 4 inicio.png" alt="App 4">
+                <img src="static/imagen_4_inicio.png" alt="App 4">
                 <h3>Rompe Barreras de Comunicación</h3>
                 <p>Elimina barreras auditivas y construye puentes entre diferentes capacidades.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 5 inicio.jpg" alt="App 5">
+                <img src="static/imagen_5_inicio.jpg" alt="App 5">
                 <h3>Amplía tus Habilidades de Comunicación</h3>
                 <p>Adquiere una nueva habilidad y conviértete en un comunicador más inclusivo.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 6 inicio.jpg" alt="App 6">
+                <img src="static/imagen_6_inicio.jpg" alt="App 6">
                 <h3>Involúcrate en una Causa Significativa</h3>
                 <p>Promueve la accesibilidad y la igualdad, impactando positivamente en la vida de las personas con discapacidad auditiva.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 7 inicio.jpg" alt="App 7">
+                <img src="static/imagen_7_inicio.jpg" alt="App 7">
                 <h3>Haz la Diferencia!!!</h3>
                 <p>Aprende lenguaje de señas para contribuir a una mayor inclusión en tu mundo.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 8 inicio.png" alt="App 8">
+                <img src="static/imagen_8_inicio.png" alt="App 8">
                 <h3>Redescubre tu expresión</h3>
                 <p>Descubre una forma única de expresar ideas, emociones y pensamientos en tu vida cotidiana.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/sordo mudo 1.jfif" alt="App 1">
+                <img src="static/sordo_mudo_1.jfif" alt="App 1">
                 <h3>Descubre el Mundo de la Comunicación No Verba</h3>
                 <p>Aprende el lenguaje de señas para conectar con la comunidad sorda y mejorar tu comunicación diaria.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/sordo mudo .jfif" alt="App 2">
+                <img src="static/sordo_mudo_.jfif" alt="App 2">
                 <h3>Conéctate con Más Personas</h3>
                 <p>Interactúa con un grupo más amplio y enriquece tus relaciones personales y profesionales.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 3 inicio.jpg" alt="App 3">
+                <img src="static/imagen_3_inicio.jpg" alt="App 3">
                 <h3>Transforma tu Empatía en Acción</h3>
                 <p>Apoya y comprende mejor a la comunidad sorda, marcando una diferencia significativa..</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen 4 inicio.png" alt="App 4">
+                <img src="static/imagen_4_inicio.png" alt="App 4">
                 <h3>Rompe Barreras de Comunicación</h3>
                 <p>Elimina barreras auditivas y construye puentes entre diferentes capacidades.</p>
             </div>
