--- a/template/inicio.html
+++ b/template/inicio.html
@@ -232,7 +232,7 @@
                 <p>Interactúa con un grupo más amplio y enriquece tus relaciones personales y profesionales.</p>
             </div>
             <div class="carousel-item">
-                <img src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/263213fdf9e7a4b9c27f738b22c2de4140eda1a5/static/imagen%203%20inicio.jpg" alt="App 3">
+                <img src=https://github.com/straeker18/ppi_dai_ARANGOs/blob/57e4476807b9f8515e7fe79e255a92a39fc481b5/static/imagen%203%20inicio.jpg" alt="App 3">
                 <h3>Transforma tu Empatía en Acción</h3>
                 <p>Apoya y comprende mejor a la comunidad sorda, marcando una diferencia significativa.</p>
             </div>
