--- a/template/inicio.html
+++ b/template/inicio.html
@@ -237,7 +237,7 @@
                 <p>Apoya y comprende mejor a la comunidad sorda, marcando una diferencia significativa.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen_4_inicio.jpg" alt="App 4">
+                <img src="static/imagen_4_inicio.png" alt="App 4">
                 <h3>Rompe Barreras de Comunicación</h3>
                 <p>Elimina barreras auditivas y construye puentes entre diferentes capacidades.</p>
             </div>
@@ -257,7 +257,7 @@
                 <p>Aprende lenguaje de señas para contribuir a una mayor inclusión en tu mundo.</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen_8_inicio.jpg" alt="App 8">
+                <img src="static/imagen_8_inicio.png" alt="App 8">
                 <h3>Redescubre tu expresión</h3>
                 <p>Descubre una forma única de expresar ideas, emociones y pensamientos en tu vida cotidiana.</p>
             </div>
@@ -277,7 +277,7 @@
                 <p>Apoya y comprende mejor a la comunidad sorda, marcando una diferencia significativa..</p>
             </div>
             <div class="carousel-item">
-                <img src="static/imagen_4_inicio.jpg" alt="App 4">
+                <img src="static/imagen_4_inicio.png" alt="App 4">
                 <h3>Rompe Barreras de Comunicación</h3>
                 <p>Elimina barreras auditivas y construye puentes entre diferentes capacidades.</p>
             </div>
