--- a/template/start.html
+++ b/template/start.html
@@ -207,6 +207,18 @@
         <a href="/mapa">Ver Mapa</a>
     </div>
 
+    <div class="map-container">
+        <h2>Explora el Diccionario</h2>
+        <p>Aprende los signos básicos y su significado.</p>
+        <a href="/diccionario">Ver Diccionario</a>
+    </div>
+
+    <div class="map-container">
+        <h2>Realiza un Test</h2>
+        <p>Pon a prueba tus conocimientos en lenguaje de señas.</p>
+        <a href="/seleccionar-categoria">Realizar Test</a>
+    </div>
+
     <footer>
         <p>&copy; 2024 SignSense. Todos los derechos reservados.</p>
     </footer>
